--- a/pages/collections/all/index.module.css
+++ b/pages/collections/all/index.module.css
@@ -25,12 +25,13 @@
     @apply z-0;
     height: 100%;
     inset: 0;
-    transform: translateZ(-10px) scale(2);
-    transform-origin: top;
     top: -100%;
+    transform-style: preserve-3d;
 
     .image {
       object-fit: cover;
+      transform: translateZ(-10px) scale(2);
+      transform-origin: top;
     } 
   }
 
